--- a/assets/styles/scss/themes/_dark.scss
+++ b/assets/styles/scss/themes/_dark.scss
@@ -3,9 +3,9 @@
 \* -------------------------------------------------------------------------- */
 
 [data-theme='dark'] {
-  --color-foreground--hsl: hsl(240, 100%, 99%);
-  --color-background--hsl: hsl(240, 100%, 10%);
-  --color-primary--hsl: hsl(27, 48%, 86%);
-  --color-secondary--hsl: hsl(34, 42%, 36%);
-  --color-tertiary--hsl: hsl(203, 42%, 36%);
+  --color-foreground: hsl(240, 100%, 99%);
+  --color-background: hsl(240, 100%, 10%);
+  --color-primary: hsl(27, 48%, 86%);
+  --color-secondary: hsl(34, 42%, 36%);
+  --color-tertiary: hsl(203, 42%, 36%);
 }
