--- a/assets/styles/scss/abstracts/_functions.scss
+++ b/assets/styles/scss/abstracts/_functions.scss
@@ -28,7 +28,7 @@
 
 // * Modify color HSLA values
 
-@function adjustHSLA(
+@function adjust-hsla(
   $color,
   $hueMultiplier: 1,
   $saturationMultiplier: 1,
@@ -46,6 +46,26 @@
     calc(#{$color-s} * #{$saturationMultiplier}),
     calc(#{$color-l} * #{$lightnessMultiplier}),
     $opacity
+  );
+}
+
+// * Modify color HSL values
+@function adjust-hsl(
+  $color,
+  $hueMultiplier: 1,
+  $saturationMultiplier: 1,
+  $lightnessMultiplier: 1
+) {
+  $color: str-replace($color, 'var(');
+  $color: str-replace($color, ')');
+  $color-h: var(#{$color + '-h'});
+  $color-s: var(#{$color + '-s'});
+  $color-l: var(#{$color + '-l'});
+
+  @return hsl(
+    calc(#{$color-h} * #{$hueMultiplier}),
+    calc(#{$color-s} * #{$saturationMultiplier}),
+    calc(#{$color-l} * #{$lightnessMultiplier})
   );
 }
 
