--- a/assets/styles/scss/abstracts/mixins/_define-color-hsl.scss
+++ b/assets/styles/scss/abstracts/mixins/_define-color-hsl.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 @mixin define-color-hsl($color, $hue, $saturation, $lightness) {
+  /* Color-Group */
   #{$color}: unquote('hsl(#{$hue}, #{$saturation}, #{$lightness})');
   #{$color}-h: #{$hue};
   #{$color}-s: #{$saturation};
