--- a/assets/styles/scss/components/_button.scss
+++ b/assets/styles/scss/components/_button.scss
@@ -9,21 +9,13 @@ button {
 
 // -  <<----------<< Specific >>---------->>
 
-$height: 65;
-$depth: 6;
-$color: #7fbb98;
-$lighten-on-hover: 7%;
-$button-speed: 0.06;
-$timing-function: ease-out;
-
 .button {
   zoom: 3;
   cursor: pointer;
   margin-left: 5px;
   margin-bottom: 15px;
   // # Successfully replaced ---> Begin
-  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
-    0 1px 1px lightness(var(--color-secondary), 1.2);
+  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8), 0 1px 1px lightness(var(--color-secondary), 1.2);
   // # Successfully replaced ---> End
   box-sizing: border-box;
   font-size: 2em;
@@ -38,9 +30,9 @@ $timing-function: ease-out;
     color: lightness(var(--color-secondary), 0.9);
   }
   // # Successfully replaced ---> End
-  height: $height + px;
-  line-height: $height + px;
-  padding: 0 (($height/2) + px);
+  height: $button--height + px;
+  line-height: $button--height + px;
+  padding: 0 (($button--height/2) + px);
   display: inline-block;
   width: auto;
 
@@ -59,44 +51,60 @@ $timing-function: ease-out;
   // # Successfully replaced ---> End
 
   top: 0;
-  transition: all ($button-speed + s) $timing-function;
+  transition: all ($button-speed + s) $button--timing-function;
   position: relative;
 }
+
+// # Successfully replaced ---> Begin
 .button:hover {
   background: linear-gradient(
     to bottom,
-    lighten(saturate(lighten($color, 15%), 35%), $lighten-on-hover) 0%,
-    lighten(saturate(lighten($color, 12%), 15%), $lighten-on-hover) 26%,
-    lighten($color, $lighten-on-hover) 100%
+    adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
+    adjust-hsl(var(--color-secondary), 1, 1.15, 1.19) 26%,
+    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%
   );
 }
+// # Successfully replaced ---> End
+
+
 .button:active {
-  top: $depth + px;
-  text-shadow: 0 -2px 0 darken($color, 0%), 0 1px 1px lighten($color, 20%),
-    0 0 4px white;
-  color: lighten($color, 45%);
+  top: $button--depth + px;
+  // # Successfully replaced ---> Begin
+  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 1), 0 1px 1px lightness(var(--color-secondary), 1.2), 0 0 4px $color-white;
+  color: lightness(var(--color-secondary), 1.45);
+  // # Successfully replaced ---> End
+
   &:before {
     top: 0;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7), 0 3px 9px rgba(0, 0, 0, 0.2);
+    // # Successfully replaced ---> Begin
+    box-shadow: $box-shadow--button---active;
+    // # Successfully replaced ---> End
   }
 }
+
+
 .button:before {
-  display: inline-block;
+  // display: inline-block;
+  display: inline-flex;
   content: '';
   position: absolute;
   left: 0;
   right: 0;
   z-index: -1;
-  top: ($depth) + px;
+  top: ($button--depth) + px;
   border-radius: 5px;
-  height: ($height) + px;
+  height: ($button--height) + px;
+
+  // # Successfully replaced ---> Begin
   background: linear-gradient(
     to top,
-    saturate(darken($color, 40%), 15%) 0%,
-    saturate(darken($color, 25%), 10%) $depth + px
+    adjust-hsl(var(--color-secondary), 1, 1.15, 0.60) 0%,
+    adjust-hsl(var(--color-secondary), 1, 1.10, 0.75) $button--depth + px
   );
-  transition: all (($button-speed * 1.3) + s) $timing-function;
-  box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3),
-    0 5px ($depth * 0.4 + px) rgba(0, 0, 0, 0.5),
-    0 ($depth * 1.8 + px) 9px rgba(0, 0, 0, 0.2);
+  // # Successfully replaced ---> End
+
+  transition: all (($button-speed * 1.3) + s) $button--timing-function;
+  // # Successfully replaced ---> Begin
+  box-shadow: $box-shadow--button---before;
+  // # Successfully replaced ---> End
 }
